compiler/tests/ar/errors/bitwise_float.salam
// توقع: E021
// لغة: العربية
دالة الرئیسیة:
    الف := 1.5
    اطبع الف & 2
نهاية
